gitops/apps/portfolio/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  labels:
    app: portfolio
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: banhcanh/portfolio:v0.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command: ["/portfolio"]
          args: ["serve", "--config", "/config.yaml"]
          volumeMounts:
            - name: config
              mountPath: /config.yaml
              subPath: config.yaml
      volumes:
        - name: config
          configMap:
            name: portfolio-config
