gitops/apps/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: portfolio
